# uzmrc

./: .gitignore  MVP-PLAN.md  QUICKSTART.md  scraper.py
corpus/: manifest.json  manifest_html.json  (+2 more)
rag-cms/backend/: .dockerignore  Dockerfile  pyproject.toml
rag-cms/backend/alembic/: env.py
rag-cms/backend/alembic/versions/: 0001_initial.py  0002_users.py  0003_ingest_progress.py  0004_chat_sessions.py  0005_chat_session_summary.py  0006_rag_members.py  0007_embedding_cache.py  0008_compare_runs.py  0009_pgvector.py  0010_file_doc_type.py
rag-cms/backend/app/: auth.py  config.py  db.py  main.py  models.py  presets.py  ratelimit.py  schemas.py
rag-cms/backend/app/agent/: events.py  grounding.py  loop.py  prompts.py  router.py  schemas.py  tools.py
rag-cms/backend/app/api/: agent.py  auth.py  compare.py  files.py  ingest.py  rags.py  search.py
rag-cms/backend/app/clients/: bm25.py  embeddings.py  llm.py  qdrant.py  voyage.py  web_search.py
rag-cms/backend/app/compare/: events.py  grounding.py  judge.py  schemas.py  service.py  splitter.py  worker.py
rag-cms/backend/app/ingestion/: chunker.py  classify.py  embed_cache.py  enrichment.py  events.py  normalize.py  ocr.py  parser.py  pipeline.py  table_describe.py
rag-cms/backend/app/retrieval/: dense.py  hybrid.py  rerank.py  sparse.py
rag-cms/backend/tests/: test_compare_async.py  test_compare_grounding.py  test_compare_judge.py  test_compare_service.py  test_compare_splitter.py  test_embed_cache.py  test_embeddings_batching.py  test_grounding_fragments.py  test_rag_stats.py  test_router_smalltalk.py
(+636 files in other folders)
