[project]
name = "rag-cms-backend"
version = "0.1.0"
description = "Multi-tenant agentic RAG platform — backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.0",
    "voyageai>=0.3.0",
    "openai>=1.55.0",
    "httpx>=0.27.0",
    "pymupdf>=1.24.0",
    "openpyxl>=3.1.0",
    "duckduckgo-search>=6.3.0",
    "tiktoken>=0.8.0",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "bcrypt>=4.1,<6",
    "pyjwt>=2.9.0",
    "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
